Added Collab Source

--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "Image Classification using Keras : https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=fh4Pkq5GszDf",
+      "name": "Image Classification using Keras",
       "provenance": [],
       "authorship_tag": "ABX9TyOtQwG7fpoLaymJ7hGwzvnO",
       "include_colab_link": true
@@ -24,7 +24,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=fh4Pkq5GszDf" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/samarthsoni17/ideal-ML-train/blob/main/Image_Classification_using_Keras.ipynb/" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -36,6 +36,8 @@
         "#Image Classification\n",
         "\n",
         "Keras introduction... build a neural network to classify MNIST images and find accuracy"
+        "\n"
+        "Open in collab: <h href=\"https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=fh4Pkq5GszDf" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
