Added Collab Source

--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "Keras introduction... build a neural network to classify MNIST images and find accuracy"
         "\n"
-        "Open in collab: <h href=\"https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=fh4Pkq5GszDf" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "Open in collab: https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=fh4Pkq5GszDf" 
       ]
     },
     {
