--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -35,7 +35,8 @@
       "source": [
         "#Image Classification\n",
         "\n",
-        "Keras introduction... build a neural network to classify MNIST images and find accuracy"
+        "Keras introduction... build a neural network to classify MNIST images and find accuracy\n"
+        "Original: \"[Open Collab Notebook](https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=PeQX3XSIsFyy)\"
       ]
     },
     {
