--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -35,7 +35,7 @@
       "source": [
         "#Image Classification\n",
         "\n",
-        "Keras introduction... build a neural network to classify MNIST images and find accuracy"
+        "Keras introduction... i want to build a neural network to classify MNIST images and find accuracy"
       ]
     },
     {
