--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Image Classification using Keras",
       "provenance": [],
-      "authorship_tag": "ABX9TyOtQwG7fpoLaymJ7hGwzvnO",
+      "authorship_tag": "ABX9TyOWKXp7TbNrLu/9LnMap4og",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +35,9 @@
       "source": [
         "#Image Classification\n",
         "\n",
-        "Keras introduction... i want to build a neural network to classify MNIST images and find accuracy"
+        "Keras introduction... build a neural network to classify MNIST images and find accuracy\n",
+        "\n",
+        "[Original Collab NB](https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=PeQX3XSIsFyy)"
       ]
     },
     {
