--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -37,7 +37,7 @@
         "\n",
         "Keras introduction... build a neural network to classify MNIST images and find accuracy\n",
         "\n",
-        "[Original Collab NB](https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=PeQX3XSIsFyy)"
+        "Open in Collab: [Original Collab NB](https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=PeQX3XSIsFyy)"
       ]
     },
     {
