--- a/Image_Classification_using_Keras.ipynb
+++ b/Image_Classification_using_Keras.ipynb
@@ -5,7 +5,6 @@
     "colab": {
       "name": "Image Classification using Keras",
       "provenance": [],
-      "authorship_tag": "ABX9TyOWKXp7TbNrLu/9LnMap4og",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,7 +34,7 @@
       "source": [
         "#Image Classification\n",
         "\n",
-        "Keras introduction... build a neural network to classify MNIST images and find accuracy\n",
+        "Keras introduction... I want to build a neural network to classify MNIST images and find accuracy\n",
         "\n",
         "Open in Collab: [Original Collab NB](https://colab.research.google.com/drive/1dzugsNo6FFmFraxP00NhUxcSly3VQhQC#scrollTo=PeQX3XSIsFyy)"
       ]
@@ -62,7 +61,7 @@
         "import tensorflow as tf\n",
         "print(\"TensorFlow version:\", tf.__version__)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -97,7 +96,7 @@
         "(x_train, y_train), (x_test, y_test) = mnist.load_data()\n",
         "x_train, x_test = x_train / 255.0, x_test / 255.0"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -132,7 +131,7 @@
         "  tf.keras.layers.Dense(10)\n",
         "])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -157,7 +156,7 @@
         "predictions = model(x_train[:1]).numpy()\n",
         "predictions"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -194,7 +193,7 @@
       "source": [
         "tf.nn.softmax(predictions).numpy()"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -237,7 +236,7 @@
       "source": [
         "loss_fn = tf.keras.losses.SparseCategoricalCrossentropy(from_logits=True)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -264,7 +263,7 @@
       "source": [
         "loss_fn(y_train[:1], predictions).numpy()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -288,7 +287,7 @@
         "              loss=loss_fn,\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -312,7 +311,7 @@
       "source": [
         "model.fit(x_train, y_train, epochs=5)"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -363,7 +362,7 @@
       "source": [
         "model.evaluate(x_test,  y_test, verbose=2)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -413,7 +412,7 @@
         "  tf.keras.layers.Softmax()\n",
         "])"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -428,7 +427,7 @@
       "source": [
         "probability_model(x_test[:5])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
